Updated '_layouts/default.html' via CloudCannon

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,6 +32,7 @@
 				<section class="top-bar">
 					<div class="logo"><a href="{{ site.baseurl }}/">{% include logo.html %}</a></div>
 					{% include navigation.html %}
+					{% include search.html %}
 				</section>
 			</div>
 
