Updated '_sass/header.scss' via CloudCannon

--- a/_sass/header.scss
+++ b/_sass/header.scss
@@ -12,7 +12,7 @@ header {
 	padding: 16px 0 10px 0;
 	/*background: $header-color;*/
 	
-	color: #fff;
+	color: #33333;
 
 	form {
 		position: relative;
