--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,6 +30,7 @@
 		<header>
 			<div class="wrapper">
 				<section class="top-bar">
+				    <div class="bc-widget bc-my-account-nav"></div>
 					<div class="logo"><a href="{{ site.baseurl }}/"><img alt="logo" title="Logo" src="{{ site.baseurl }}/assets/images/logo.png" /></a></div>
 					{% include navigation.html %}
 					{% include search.html %}
@@ -44,4 +45,12 @@
 
 		{% include footer.html %}
 	</body>
+	
+    /* Bibliocommons widget: https://chipublib.bibliocommons.com/info/integration */
+	<script async="async" type="text/javascript">
+	  (function(){var e=document.createElement("script");
+      e.src="https://chipublib.bibliocommons.com/javascripts/sdk.js"; 
+      e.async=true;var t=document.getElementsByTagName("script")[0];t.parentNode.insertBefore(e,t)})()
+    </script>
+
 </html>
