--- a/_sass/typography.scss
+++ b/_sass/typography.scss
@@ -9,8 +9,8 @@ html {
 body {
 	height: 100%;
 	max-height: 100%;
-	font-family: "Merriweather", serif;
-	letter-spacing: 0.01rem;
+    font-family: Arial, Helvetica, sans-serif;
+    letter-spacing: 0.01rem;
 	font-size: 1.8em;
 	line-height: 1.75em;
 	color: #3A4145;
