Updated '_layouts/default.html' via CloudCannon

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -47,7 +47,7 @@
 		{% include footer.html %}
 	</body>
 	
-    /* Bibliocommons widget: https://chipublib.bibliocommons.com/info/integration */
+    <!-- Bibliocommons widget: https://chipublib.bibliocommons.com/info/integration -->
 	<script async="async" type="text/javascript">
 	  (function(){var e=document.createElement("script");
       e.src="https://chipublib.bibliocommons.com/javascripts/sdk.js"; 
