--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -8,7 +8,7 @@ $desktop: "(min-width: 900px)";
 $dark-grey: #222;
 $medium-grey: #666;
 $light-grey: #ccc;
-$header-color: #0c92f1;
+$header-color: transparent;
 
-$link-color: #4A4A4A;
-$link-hover-color: #111;
+$link-color: #2d63af;
+$link-hover-color: #2d63af;
