--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,6 +1,7 @@
 <a class="nav-toggle" id="open-nav" href="#">&#9776;</a>
 <nav>
 	<a class="editor-link btn" href="cloudcannon:collections/_data/navigation.yml" class="btn" style="padding: 5px;"><strong>&#9998;</strong> Edit navigation</a>
+	{% site.data.navigation | json}
 	{% for link in site.data.navigation %}
 	{% assign class = "" %}
 
@@ -10,3 +11,4 @@
 		<a href="{% include relative-src.html src=link.link %}" class="{{ class }}">{{ link.name }}</a>
 	{% endfor %}
 </nav>
+
