--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -10,16 +10,16 @@
 			{% assign class = class | append: " active" %}
 		{% endif %}
 		<li><a href="{% include relative-src.html src=link.link %}" class="{{ class }}">{{ link.name }}</a>
-		  {% if link.subnav.size > 0 }
+		  {% if link.subnav.size > 0 %}
     		  <ul>
     		    {% for sublink in link.subnav}
-    		        {% assign subclass = "" %}
-    
-            		{% if sublink.link == page.url %}
-            			{% assign subclass = subclass | append: " active" %}
-            		{% endif %}
-    		    
-    		     	<li><a href="{% include relative-src.html src=sublink.link %}" class="{{ subclass }}">{{ sublink.name }}</a>
+		        {% assign subclass = "" %}
+
+        		{% if sublink.link == page.url %}
+        			{% assign subclass = subclass | append: " active" %}
+        		{% endif %}
+		    
+		     	<li><a href="{% include relative-src.html src=sublink.link %}" class="{{ subclass }}">{{ sublink.name }}</a>
     		    {% endfor %}
     		  </ul>
 		  {% endif %}
