Updated '_sass/header.scss' via CloudCannon

--- a/_sass/header.scss
+++ b/_sass/header.scss
@@ -108,6 +108,14 @@ header {
 				}
 			}
 		}
+		ul li {
+		    list-style:none;
+		    display:inline;
+		    li {
+		        display:hide;
+		    }
+		}
+		
 	}
 }
 
