Updated '_layouts/default.html' via CloudCannon

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,7 +27,7 @@
 	</head>
 
 	<body class="{{ page.body_class }}">
-	    <div class="bc-widget bc-my-account-nav"></div>
+	    <!-- div class="bc-widget bc-my-account-nav"></div -->
 		<header>
 			<div class="wrapper">
 				<section class="top-bar">
