--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,29 +1,12 @@
-<a class="nav-toggle" id="open-nav" href="#">&#9776;</a>
-<nav>
-	<a class="editor-link btn" href="cloudcannon:collections/_data/navigation.yml" class="btn" style="padding: 5px;"><strong>&#9998;</strong> Edit navigation</a>
-	<ul>
-	{% for link in site.data.navigation %}
-	{% assign class = "" %}
-
-		{% if link.link == page.url %}
-			{% assign class = class | append: " active" %}
-		{% endif %}
-		<li><a href="{% include relative-src.html src=link.link %}" class="{{ class }}">{{ link.name }}</a>
-		  {% if link.subnav.size > 0 %}
-    		  <ul>
-    		    {% for sublink in link.subnav}
-		        {% assign subclass = "" %}
-
-        		{% if sublink.link == page.url %}
-        			{% assign subclass = subclass | append: " active" %}
-        		{% endif %}
-		    
-		     	<li><a href="{% include relative-src.html src=sublink.link %}" class="{{ subclass }}">{{ sublink.name }}</a>
-    		    {% endfor %}
-    		  </ul>
-		  {% endif %}
-		</li>
-	{% endfor %}
-	</ul>
-</nav>
-
+ <ul>
+    {% for node in site.pages %}
+      {% if node.url contains base_url %}
+        {% assign node_url_parts = node.url | split: '/' %}
+        {% assign node_url_parts_size = node_url_parts | size %}
+        {% assign filename = node_url_parts | last %}
+        {% if url_parts_size == node_url_parts_size and filename != 'index.html' %}
+          <li><a href='{{node.url}}'>{{node.title}}</a></li>
+        {% endif %}
+      {% endif %}
+    {% endfor %}
+    </ul>
