--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,14 +1,9 @@
     {{ site.pages | json }}
 
  <ul>
-    {% for node in site.pages %}
-      {% if node.url contains base_url %}
-        {% assign node_url_parts = node.url | split: '/' %}
-        {% assign node_url_parts_size = node_url_parts | size %}
-        {% assign filename = node_url_parts | last %}
-        {% if url_parts_size == node_url_parts_size and filename != 'index.html' %}
-          <li><a href='{{node.url}}'>{{node.title}}</a></li>
-        {% endif %}
-      {% endif %}
-    {% endfor %}
+      {% for p in site.pages %}
+        <li>
+          <a href="{{ p.url }}">{{ p.title }}</a>
+        </li>
+      {% endfor %}
     </ul>
