--- a/assets/css/screen.scss
+++ b/assets/css/screen.scss
@@ -1,15 +1,31 @@
 ---
 ---
+
+/* Dependencies can be found in the _sass directory */
+
+/* SASS variables */
 @import "variables";
-@import "typography";
-@import "elements";
-@import "tutorials";
-@import "header";
-@import "layout";
-@import "search";
-@import "dark-theme";
-@import "footer";
-@import "faq";
-@import "modal";
-@import "form";
-@import "cloudcannon";
+
+/* Base */
+@import "http://fonts.googleapis.com/css?family=Open+Sans:400italic,600italic,700italic,700,600,400|Inconsolata:400,700"
+@import "https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css";
+@import "base/normalize.css";
+@import "base/typography.css";
+@import "base/states.css";
+
+/* Layout */
+@import "layout/grid/css/grid12.css";
+
+
+/* Components */
+@import "components/buttons.css";
+@import "components/forms.css";
+@import "components/images.css";
+@import "components/lists.css";
+@import "components/menus.css";
+@import "components/tables.css";
+@import "components/code.css";
+
+/* Theme*/
+@import "theme/code.css";
+@import "theme/breakpoints.css";
