Updated 'assets/css/screen.scss' via CloudCannon

--- a/assets/css/screen.scss
+++ b/assets/css/screen.scss
@@ -7,7 +7,7 @@
 @import "variables";
 
 /* Base */
-@import "http://fonts.googleapis.com/css?family=Open+Sans:400italic,600italic,700italic,700,600,400|Inconsolata:400,700"
+@import "http://fonts.googleapis.com/css?family=Open+Sans:400italic,600italic,700italic,700,600,400|Inconsolata:400,700";
 @import "https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css";
 @import "base/normalize.css";
 @import "base/typography.css";
