--- a/assets/css/screen.scss
+++ b/assets/css/screen.scss
@@ -9,7 +9,7 @@
 /* Base */
 @import "http://fonts.googleapis.com/css?family=Open+Sans:400italic,600italic,700italic,700,600,400|Inconsolata:400,700";
 @import "https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css";
-@import "base/normalize";
+@import "base/normalize.css";
 @import "base/typography";
 @import "base/states";
 
