Updated 'assets/css/screen.scss' via CloudCannon

--- a/assets/css/screen.scss
+++ b/assets/css/screen.scss
@@ -10,7 +10,7 @@
 @import "http://fonts.googleapis.com/css?family=Open+Sans:400italic,600italic,700italic,700,600,400|Inconsolata:400,700";
 @import "https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css";
 @import "_sass/base/normalize.css";
-@import "_sass/base/typography.css";
+@import "base/typography.css";
 @import "_sass/base/states.css";
 
 /* Layout */
