Cleanup and reorganize files

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,10 +9,35 @@
 		<link rel="apple-touch-icon" href="{{ site.baseurl }}/assets/images/apple-touch-icon.png">
 		<link rel="icon" type="image/png" href="{{ site.baseurl }}/assets/images/touch-icon.png" sizes="192x192">
 		<link rel="icon" type="image/png" href="{{ site.baseurl }}/assets/images/favicon.png">
-
 		{% seo %}
 		{% feed_meta %}
 
+        <!-- Base -->
+        <link href="assets/css/base/normalize.css" rel="stylesheet" type="text/css" />
+        <link href="http://fonts.googleapis.com/css?family=Open+Sans|Inconsolata" rel="stylesheet" type="text/css" />
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+        <link href="assets/css/base/print.css" rel="stylesheet" type="text/css" />
+        <link href="assets/css/base/typography.css" rel="stylesheet" type="text/css" />
+        <link href="assets/css/base/states.css" rel="stylesheet" type="text/css" />
+        
+        <!-- Layout -->
+        <link href="assets/css/layout/grid/css/grid12.css" rel="stylesheet" type="text/css" />
+        
+        <!-- Components -->
+        <link href="assets/css/components/buttons.css" rel="stylesheet" type="text/css" />
+        <link href="assets/css/components/forms.css" rel="stylesheet" type="text/css" />
+        <link href="assets/css/components/images.css" rel="stylesheet" type="text/css" />
+        <link href="assets/css/components/lists.css" rel="stylesheet" type="text/css" />
+        <link href="assets/css/components/menus.css" rel="stylesheet" type="text/css" />
+        <link href="assets/css/components/tables.css" rel="stylesheet" type="text/css" />
+        <link href="assets/css/components/pushtape-player.css" rel="stylesheet" type="text/css" />
+        <link href="assets/css/components/code.css" rel="stylesheet" type="text/css" />
+        
+        <!-- Theme -->
+        <link href="assets/css/theme/theme.css" rel="stylesheet" type="text/css" />
+        <link href="assets/css/theme/breakpoints.css" rel="stylesheet" type="text/css" />
+                
+        
 		<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 	</head>
 
