--- a/assets/css/screen.scss
+++ b/assets/css/screen.scss
@@ -5,27 +5,4 @@
 
 /* SASS variables */
 @import "variables";
-
-/* Base */
-@import "http://fonts.googleapis.com/css?family=Open+Sans:400italic,600italic,700italic,700,600,400|Inconsolata:400,700";
-@import "https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css";
-@import "_sass/base/normalize.css";
-@import "base/typography.css";
-@import "_sass/base/states.css";
-
-/* Layout */
-@import "_sass/layout/grid/css/grid12.css";
-
-
-/* Components */
-@import "_sass/components/buttons.css";
-@import "_sass/components/forms.css";
-@import "_sass/components/images.css";
-@import "_sass/components/lists.css";
-@import "_sass/components/menus.css";
-@import "_sass/components/tables.css";
-@import "_sass/components/code.css";
-
-/* Theme*/
-@import "_sass/theme/code.css";
-@import "_sass/theme/breakpoints.css";
+@import "cloudcannon";
