--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -64,7 +64,10 @@
 		{% include footer.html %}
 
 	</body>
-	
+	<script type="text/javascript" src="{{site.base_url}}/assets/js/lunr.min.js"></script>
+	<script type="text/javascript" src="{{site.base_url}}/assets/js/search.js"></script>
+	<script type="text/javascript" src="{{site.base_url}}/assets/js/main.js"></script>
+
     <!-- Scripts -->
     {% if jekyll.environment == 'production' and site.google_analytics_key != '' %}
         <script>
