--- a/assets/css/theme/theme.css
+++ b/assets/css/theme/theme.css
@@ -18,7 +18,7 @@ html {
 html, #container, .inner {
   position: relative;
   min-height: 100%;  
-  background-color:#222;
+  /*background-color:#222;*/
 }
 #container {
   margin:0 auto;
@@ -32,7 +32,7 @@ a {
 #content {
   padding:20px;
   margin:0 auto;
-  background:rgba(0,0,0,.5);
+  /*background:rgba(0,0,0,.5);*/
   margin:0 auto;
 }
 
@@ -91,104 +91,5 @@ header a {
 }
 #site-name a {
   color:#FFF;
-}
-
-/**
- * Release
- */
-.artwork {
-  clear:both;
-  border:solid #5F5F5F 1px;
-  position:relative;
-  width:100%;
-  margin-bottom:1em;
-}
-.artwork img {
-  padding:0;
-  margin:0;
-  display:block;
-  width:100%;
-}
-.tracklist {
-  /*
-  margin-left:2em;
-  list-style-type:decimal-leading-zero;
-  */
-  margin-bottom:2em;
-}
-
-/**
- * Footer
- */
-footer {
-  /*
-  color:#000;
-  position:fixed;
-  bottom:0;
-  left:0;
-  right:0;
-  */
-}
-.footer-text,
-.pt-controls {
-  padding:1rem;
-  font-size:1.2rem;
-  line-height:1.2rem;
-  background-color:rgba(0,0,0,.9);
-  /*border-top:solid 1px #444;*/
-}
-.footer-text {
-  font-size:1.2rem;
-  padding:.75rem;
-  background-color:#000;
-  color:#999;
-  border-top:solid 1px #222;
-}
-.pt-controls {
-  width:100%;
-  font-size:1.5rem;
-  line-height:2.5rem;
-  padding:1rem 2rem;
-}
-
-/**
- * Releases page
- */
-ul.release-list {
-  list-style:none;
-  margin:0;
-  padding:0;
-}
-ul.release-list li {
-  display:inline;
-}
-ul.release-list .release-title {
-  display:inline-block;
-}
-ul.release-list .artwork {
-  float:none;
-}
-#content .release {
-  overflow:auto;
-  border:none;
-  padding-bottom:20px;
-  margin-bottom:20px;
-  display:block;
-  vertical-align:middle;
-}
-.creator {
-  display:inline-block;
-  margin-left:1rem;
-  color:#888;
-  font-size:3rem;
-}
-.creator:before {
-  content:' by ';
-}
-.artist {
-  display:inline-block;
-  margin-left:1rem;
-  color:#888;
-  font-style:italic;
 }
 
