--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,8 +10,8 @@
 		<link rel="icon" type="image/png" href="{{ site.baseurl }}/assets/images/favicon.png">
 		{% seo %}
 		{% feed_meta %}
-
-
+ 
+        <!-- MUI CSS/JS -->
         <link href="//cdn.muicss.com/mui-0.10.3/css/mui.min.css" rel="stylesheet" type="text/css" />
         <script src="//cdn.muicss.com/mui-0.10.3/js/mui.min.js"></script>
 
