Updated '_layouts/default.html' via CloudCannon

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,11 +10,32 @@
 		<link rel="icon" type="image/png" href="{{ site.baseurl }}/assets/images/favicon.png">
 		{% seo %}
 		{% feed_meta %}
- 
-        <!-- MUI CSS/JS -->
-        <link href="//cdn.muicss.com/mui-0.10.3/css/mui.min.css" rel="stylesheet" type="text/css" />
-        <script src="//cdn.muicss.com/mui-0.10.3/js/mui.min.js"></script>
 
+        <!-- Base -->
+        <link href="{{ site.baseurl }}/assets/css/base/normalize.css" rel="stylesheet" type="text/css" />
+		<link rel="stylesheet" href="{{ site.baseurl }}/assets/css/screen.css"> <!-- Transpiled source: assets/css/screen.scss -->
+        <link href="http://fonts.googleapis.com/css?family=Open+Sans|Inconsolata" rel="stylesheet" type="text/css" />
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+        <link href="{{ site.baseurl }}/assets/css/base/print.css" rel="stylesheet" type="text/css" />
+        <link href="{{ site.baseurl }}/assets/css/base/typography.css" rel="stylesheet" type="text/css" />
+        <link href="{{ site.baseurl }}/assets/css/base/states.css" rel="stylesheet" type="text/css" />
+        
+        <!-- Layout -->
+        <link href="{{ site.baseurl }}/assets/css/layout/grid/css/grid12.css" rel="stylesheet" type="text/css" />
+        
+        <!-- Components -->
+        <link href="{{ site.baseurl }}/assets/css/components/buttons.css" rel="stylesheet" type="text/css" />
+        <link href="{{ site.baseurl }}/assets/css/components/forms.css" rel="stylesheet" type="text/css" />
+        <link href="{{ site.baseurl }}/assets/css/components/images.css" rel="stylesheet" type="text/css" />
+        <link href="{{ site.baseurl }}/assets/css/components/lists.css" rel="stylesheet" type="text/css" />
+        <link href="{{ site.baseurl }}/assets/css/components/menus.css" rel="stylesheet" type="text/css" />
+        <link href="{{ site.baseurl }}/assets/css/components/tables.css" rel="stylesheet" type="text/css" />
+        <link href="{{ site.baseurl }}/assets/css/components/code.css" rel="stylesheet" type="text/css" />
+        
+        <!-- Theme -->
+        <link href="{{ site.baseurl }}/assets/css/theme/theme.css" rel="stylesheet" type="text/css" />
+        <link href="{{ site.baseurl }}/assets/css/theme/breakpoints.css" rel="stylesheet" type="text/css" />
+                
         
 		<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 	</head>
