Updated 'assets/css/components/menus.css' via CloudCannon

--- a/assets/css/components/menus.css
+++ b/assets/css/components/menus.css
@@ -56,7 +56,7 @@ ul.menu.hide {
 }
 
 nav {
-    position:sticky;
+    position:absolute;
     width:300px;
     border:solid 1px #fdfdfd;
     top:30px;
