--- a/assets/css/components/menus.css
+++ b/assets/css/components/menus.css
@@ -59,7 +59,8 @@ nav {
     position:absolute;
     width:300px;
     border:solid 1px #fdfdfd;
-    top:50px;
+    top:0;
+    bottom:0;
     right:0;
     z-index:10;
     background:#eee;
