Updated 'assets/css/components/menus.css' via CloudCannon

--- a/assets/css/components/menus.css
+++ b/assets/css/components/menus.css
@@ -31,6 +31,9 @@
   outline:none;
   color:#666;
 }
+.menu li a a {
+  font-size:143rem;
+}
 .menu li a:hover {
   color:#222;
   /*border-bottom-color:#d35400;*/
