--- a/assets/css/components/menus.css
+++ b/assets/css/components/menus.css
@@ -11,7 +11,7 @@
 
 .menu ul {
   margin:0;
-  padding:0 2rem;
+  padding:0;
   list-style:none;
 }
 .menu li {
@@ -20,7 +20,7 @@
 .menu li a {
   margin:0;
   padding:0 2rem;
-  display:inline-block;
+  display:block;
   vertical-align:middle;
   border-top:solid 3px transparent;
   border-bottom:solid 3px transparent;
@@ -35,6 +35,7 @@
 .menu li li a {
   font-size:1.4rem; 
   font-weight:normal;
+  padding-left:2rem;
 }
 .menu li a:hover {
   color:#222;
