Updated 'assets/css/components/menus.css' via CloudCannon

--- a/assets/css/components/menus.css
+++ b/assets/css/components/menus.css
@@ -63,7 +63,7 @@ ul.menu.hide {
 }
 
 nav {
-    position:absolute;
+    position:fixed;
     width:300px;
     border:solid 1px #fdfdfd;
     top:0;
