--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,5 +1,5 @@
 <nav class="slide">
-    <a class="mobile-menu-toggle no-user-select visible-xs"><i class="fa fa-bars"><span class="element-invisible">Menu</span></i></a> 
+    <a class="mobile-menu-toggle no-user-select visible-xs"><i class="fa fa-close"><span class="element-invisible">Menu</span></i></a> 
     
 	<a class="editor-link btn" href="cloudcannon:collections/_data/navigation.yml" class="btn" style="padding: 5px;"><strong>&#9998;</strong> Edit navigation</a>
 	<ul id="main-menu" class="menu side-scroll">
