Updated 'assets/css/components/menus.css' via CloudCannon

--- a/assets/css/components/menus.css
+++ b/assets/css/components/menus.css
@@ -76,7 +76,10 @@ nav {
     background:#eee;
 }
 
-a.mobile-menu-close {
+a.mobile-menu-toggle {
    color:#222; 
-   z-index:11;
+}
+a.mobile-menu-toggle.close {
+  color:#ff5252;
+  
 }
