Updated '_includes/navigation.html' via CloudCannon

--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,7 +1,7 @@
 
 
 <nav class="slide">
-   <a class="mobile-menu-toggle no-user-select visible-xs"><i class="fa fa-menu"><span class="element-invisible">Menu</span></i></a> 
+   <a class="mobile-menu-toggle close no-user-select visible-xs"><i class="fa fa-close"><span class="element-invisible">Menu</span></i></a> 
 	<a class="editor-link btn" href="cloudcannon:collections/_data/navigation.yml" class="btn" style="padding: 5px;"><strong>&#9998;</strong> Edit navigation</a>
 	<ul id="main-menu" class="menu side-scroll">
 	{% for link in site.data.navigation %}
