--- a/assets/css/components/menus.css
+++ b/assets/css/components/menus.css
@@ -73,6 +73,7 @@ nav {
     right:0;
     z-index:10;
     background:#eee;
+    height:auto;
 }
 
 a.mobile-menu-toggle {
@@ -81,4 +82,5 @@ a.mobile-menu-toggle {
 a.mobile-menu-toggle.close {
   float:none;
   text-align:right;
+  background-color:#ddd;
 }
