--- a/assets/css/components/menus.css
+++ b/assets/css/components/menus.css
@@ -83,4 +83,6 @@ a.mobile-menu-toggle.close {
   float:none;
   text-align:right;
   background-color:#ddd;
+  border-bottom:solid 1px #ccc;
+  color:#666;
 }
