Updated 'assets/css/components/menus.css' via CloudCannon

--- a/assets/css/components/menus.css
+++ b/assets/css/components/menus.css
@@ -84,5 +84,5 @@ a.mobile-menu-toggle.close {
   text-align:right;
   background-color:#ddd;
   border-bottom:solid 1px #ccc;
-  color:#E57373;
+  color:#666;
 }
