Updated '_layouts/default.html' via CloudCannon

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,8 +14,8 @@
         <!-- Base -->
 		<link rel="stylesheet" href="{{ site.baseurl }}/assets/css/screen.css"> <!-- Transpiled source: assets/css/screen.scss -->
         <link href="{{ site.baseurl }}/assets/css/base/normalize.css" rel="stylesheet" type="text/css" />
-        <link href="http://fonts.googleapis.com/css?family=Open+Sans|Inconsolata" rel="stylesheet" type="text/css" />
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+        <link href="//fonts.googleapis.com/css?family=Open+Sans|Inconsolata" rel="stylesheet" type="text/css" />
+        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
         <link href="{{ site.baseurl }}/assets/css/base/print.css" rel="stylesheet" type="text/css" />
         <link href="{{ site.baseurl }}/assets/css/base/typography.css" rel="stylesheet" type="text/css" />
         <link href="{{ site.baseurl }}/assets/css/base/states.css" rel="stylesheet" type="text/css" />
@@ -37,7 +37,7 @@
         <!-- link href="{{ site.baseurl }}/assets/css/theme/breakpoints.css" rel="stylesheet" type="text/css" / -->
                 
         
-		<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+		<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 	</head>
 
 	<body class="{{ page.body_class }}">
