--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,7 +34,7 @@
         
         <!-- Theme -->
         <link href="{{ site.baseurl }}/assets/css/theme/theme.css" rel="stylesheet" type="text/css" />
-        <!-- link href="{{ site.baseurl }}/assets/css/theme/breakpoints.css" rel="stylesheet" type="text/css" / -->
+        <link href="{{ site.baseurl }}/assets/css/theme/breakpoints.css" rel="stylesheet" type="text/css" />
                 
         
 		<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
