Updated 'assets/css/theme/breakpoints.css' via CloudCannon

--- a/assets/css/theme/breakpoints.css
+++ b/assets/css/theme/breakpoints.css
@@ -12,5 +12,9 @@
   nav.hide {
     display:block;
     position:relative;
+    top:auto;
+    bottom:auto;
+    right:auto;
+    width:auto;
   }
 }
