--- a/assets/css/theme/breakpoints.css
+++ b/assets/css/theme/breakpoints.css
@@ -18,10 +18,10 @@
     width:auto;
   }
 
-  ul.menu li {
+  .main-menu li {
     display:inline;
   }
-  ul.menu ul {
+  .main-menu ul {
     display:hide;
   }
   
