Updated 'assets/css/theme/breakpoints.css' via CloudCannon

--- a/assets/css/theme/breakpoints.css
+++ b/assets/css/theme/breakpoints.css
@@ -21,6 +21,9 @@
   .main-menu li {
     display:inline;
   }
+  .main-menu li a {
+    display:inline-block;
+  }
   .main-menu ul {
     display:hide;
   }
