--- a/_includes/search.html
+++ b/_includes/search.html
@@ -1,4 +1,4 @@
-<form class="search-form" action="{{ site.baseurl }}/search/" method="get">
+<form class="search-form hide" action="{{ site.baseurl }}/search/" method="get">
 	<input type="search" name="q" {% if include.add_id %}id="search-input"{% endif %} placeholder="Search..." autofocus>
 	<input type="submit" value="Search" style="display: none;">
 </form>
