--- a/assets/css/theme/theme.css
+++ b/assets/css/theme/theme.css
@@ -92,4 +92,18 @@ header a {
 #site-name a {
   color:#FFF;
 }
+.search-form {
+  position:absolute;
+  padding:50px;
+  background:rgba(255,255,255,.9);
+  font-size:3.5rem;
+  text-align:center;
+  top:0;
+  bottom:0;
+  left:0;
+  right:0;
+}
+.search-form.hide {
+  display:none;  
+}
 
