--- a/assets/css/components/menus.css
+++ b/assets/css/components/menus.css
@@ -79,10 +79,12 @@ nav.hide {
   display:none;
 }
 
-a.mobile-menu-toggle {
+a.mobile-menu-toggle, 
+a.mobile-search-toggle {
   color:#222; 
 }
-a.mobile-menu-toggle.close {
+a.mobile-menu-toggle.close,
+a.mobile-search-toggle.close {
   float:none;
   text-align:right;
   background-color:#ddd;
