--- a/assets/css/theme/theme.css
+++ b/assets/css/theme/theme.css
@@ -114,3 +114,16 @@ header a {
   display:none;  
 }
 
+footer {
+  text-align:center;
+  background-color:#666;
+}
+ul.footer-links {
+  list-style:none;
+  margin:0;
+  padding:0;
+}
+ul.footer-links li {
+  display:inline;  
+}
+
