Updated 'assets/css/theme/breakpoints.css' via CloudCannon

--- a/assets/css/theme/breakpoints.css
+++ b/assets/css/theme/breakpoints.css
@@ -23,10 +23,17 @@
   }
   .menu li a {
     display:inline-block;
-    font-weight:normal
+    font-weight:normal;
+    border:none;
+    border-bottom:solid 3px transparent;
+    
   }
   .menu ul {
     display:none;
   }
+  
+  
+  
+  
   
 }
