--- a/assets/css/components/menus.css
+++ b/assets/css/components/menus.css
@@ -54,7 +54,7 @@
 
 .mobile-menu-toggle,
 .mobile-search-toggle {
-  display:block;
+  display:inline-block;
   font-size:2.2rem;
   padding:10px 20px;
   z-index:101;
