--- a/assets/css/components/menus.css
+++ b/assets/css/components/menus.css
@@ -66,11 +66,17 @@
   float:right;
 }
 
-.mobile-menu-toggle.close,
-.mobile-search-toggle.close {
+.mobile-menu-toggle.close {
   text-align:right;
   background-color:#ddd;
   border-bottom:solid 1px #ccc;
+  color:#666;
+}
+
+
+.mobile-search-toggle.close {
+  display:inline;
+  text-align:left;
   color:#666;
 }
 
