--- a/assets/css/components/menus.css
+++ b/assets/css/components/menus.css
@@ -87,14 +87,11 @@ ul.menu.hide {
 
 nav {
   position:absolute;
-  width:300px;
-  border:solid 1px #fdfdfd;
   top:0;
-  bottom:0;
-  right:0;
-  z-index:10;
+  width:100%;
+  height:50px;
+  border-bottom:solid 1px #fdfdfd;
   background:#eee;
-  height:auto;
 }
 nav.hide {
   display:none;
