Updated 'assets/css/theme/theme.css' via CloudCannon

--- a/assets/css/theme/theme.css
+++ b/assets/css/theme/theme.css
@@ -103,7 +103,7 @@ header a {
   border-bottom:solid 3px #666;
   background-color:#fdfdfd;
   color:#333;
-  border-radius:10px;
+  border-radius:0;
 }
 .search-form.hide {
   display:none;  
