--- a/assets/css/theme/theme.css
+++ b/assets/css/theme/theme.css
@@ -98,11 +98,13 @@ header a {
   padding:5rem;
   width:100%;
   background-color:#ddd;
+  text-align:center;
 }
 .search-form input {
+  font-size:2.5rem;
   border:none;
   border-bottom:solid 3px #666;
-  background-color:#fdfdfd;
+  background-color:#eee;
   color:#333;
   border-radius:0;
 }
