--- a/assets/css/theme/theme.css
+++ b/assets/css/theme/theme.css
@@ -94,17 +94,18 @@ header a {
 }
 .search-form {
   position:absolute;
-  top:0;
-  padding:5rem;
-  width:100%;
-  background-color:#ddd;
+  vertical-align:middle;
+  background:#ccc;
+  border-bottom:solid #ddd 1px;
   text-align:center;
+  top:0;
+  bottom:0;
+  left:0;
+  right:0;
 }
 .search-form input {
-  font-size:2.5rem;
   border:none;
-  border-bottom:solid 3px #666;
-  background-color:#eee;
+  border-bottom:dotted 3px #666;
   color:#333;
   border-radius:0;
 }
