--- a/assets/css/components/menus.css
+++ b/assets/css/components/menus.css
@@ -86,7 +86,8 @@ ul.menu.hide {
 nav {
   position:absolute;
   top:0;
-  width:100%;
+  right:0;
+  width:300px;
   height:50px;
   border-bottom:solid 1px #fdfdfd;
   background:#eee;
