--- a/assets/css/components/menus.css
+++ b/assets/css/components/menus.css
@@ -87,8 +87,9 @@ nav {
   position:absolute;
   top:0;
   right:0;
+  bottom:0;
   width:300px;
-  height:50px;
+  height:auto;
   border-bottom:solid 1px #fdfdfd;
   background:#eee;
 }
