--- a/assets/css/theme/theme.css
+++ b/assets/css/theme/theme.css
@@ -93,15 +93,13 @@ header a {
   color:#FFF;
 }
 .search-form {
-
+  text-align:center;
 }
 .search-form input {
   border:none;
   border-bottom:solid 3px #666;
   color:#333;
   border-radius:0;
-  display:block;
-  width:100%;
   font-size:2.0rem;
   padding:1.0rem;
 }
