Updated 'assets/css/theme/theme.css' via CloudCannon

--- a/assets/css/theme/theme.css
+++ b/assets/css/theme/theme.css
@@ -93,7 +93,7 @@ header a {
   color:#FFF;
 }
 .search-form {
-  text-align:center;
+  
 }
 .search-form input {
   border:none;
@@ -101,7 +101,8 @@ header a {
   color:#333;
   border-radius:0;
   font-size:2.0rem;
-  padding:1.0rem;
+  padding:4.0rem;
+  width:100%;
 }
 .search-form.hide {
   display:none;  
