--- a/assets/css/theme/theme.css
+++ b/assets/css/theme/theme.css
@@ -93,7 +93,6 @@ header a {
   color:#FFF;
 }
 .search-form {
-  
 }
 .search-form input {
   border:none;
@@ -103,6 +102,10 @@ header a {
   font-size:2.0rem;
   padding:4.0rem;
   width:100%;
+  text-align:center;
+}
+.search-form input:focus {
+  background-color:#BBDEFB;
 }
 .search-form.hide {
   display:none;  
