--- a/assets/css/theme/theme.css
+++ b/assets/css/theme/theme.css
@@ -100,12 +100,11 @@ header a {
   color:#333;
   border-radius:0;
   font-size:2.0rem;
-  padding:4.0rem;
+  padding:2.0rem;
   width:100%;
-  text-align:center;
+  background-color:#DDD;
 }
 .search-form input:focus {
-  background-color:#BBDEFB;
 }
 .search-form.hide {
   display:none;  
