--- a/assets/css/theme/theme.css
+++ b/assets/css/theme/theme.css
@@ -97,7 +97,7 @@ header a {
 .search-form input {
   border:none;
   border-bottom:solid 5px #666;
-  color:#333;
+  color:#FF5722;
   border-radius:0;
   font-size:2.0rem;
   padding:2.0rem;
