--- a/assets/css/theme/theme.css
+++ b/assets/css/theme/theme.css
@@ -102,7 +102,7 @@ header a {
   font-size:2.0rem;
   padding:2.0rem;
   width:100%;
-  background-color:#DDD;
+  background-color:#EEE;
 }
 .search-form input:focus {
   border:none;
